linux friendly version of call